FILE(GLOB INSTALLER_FILES *.py)
FILE(GLOB UI_FILES dialog.ui panel.ui)
PYQT4_WRAP_UI(PYUI_FILES ${UI_FILES} ${PYUI_FILES})

SET(INSTALLER_FILES ${INSTALLER_FILES})

ADD_CUSTOM_TARGET(processingplugin ALL DEPENDS ${PYUI_FILES})
INSTALL(FILES ${INSTALLER_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/processingplugin)
